tests/snapshots/snapshots__pipeline@handler_partial.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/handler_partial.pr
---
== tokens ==
VOpen Effect UIdent("E") VOpen Ident("one") LParen RParen Colon KwInt VSemi Ident("two") LParen RParen Colon KwInt VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen Handle Ident("one") LParen RParen Plus Ident("two") LParen RParen With LBrace Ident("one") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 1, suffix: None }) RParen Comma Return Ident("r") FatArrow Ident("r") RBrace RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "E",
            params: [],
            ops: [
                EffOp {
                    name: "one",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 167..170,
                },
                EffOp {
                    name: "two",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 181..184,
                },
            ],
            span: 156..192,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 208..215,
                    },
                    [
                        Spanned {
                            node: Handle(
                                Spanned {
                                    node: Bin(
                                        Add,
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "one",
                                                    ),
                                                    span: 223..226,
                                                },
                                                [],
                                            ),
                                            span: 223..228,
                                        },
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "two",
                                                    ),
                                                    span: 231..234,
                                                },
                                                [],
                                            ),
                                            span: 231..236,
                                        },
                                    ),
                                    span: 223..236,
                                },
                                [
                                    Op(
                                        "one",
                                        [],
                                        "k",
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "k",
                                                    ),
                                                    span: 266..267,
                                                },
                                                [
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 1,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 268..269,
                                                    },
                                                ],
                                            ),
                                            span: 266..270,
                                        },
                                    ),
                                    Return(
                                        "r",
                                        Spanned {
                                            node: Var(
                                                "r",
                                            ),
                                            span: 288..289,
                                        },
                                    ),
                                ],
                                Exhaustive,
                            ),
                            span: 216..293,
                        },
                    ],
                ),
                span: 208..294,
            },
            wheres: [],
            span: 194..294,
        },
    ],
}

== types ==
[E5011] Type Error: in `main`: handler for effect `E` is missing `two`; a handler must implement every operation of the effect it handles
    ╭─[ <source>:8:11 ]
    │
  8 │ ╭─▶   println(handle one() + two() with {
    ┆ ┆   
 11 │ ├─▶   })
    │ │          
    │ ╰────────── in `main`: handler for effect `E` is missing `two`; a handler must implement every operation of the effect it handles
────╯
