tests/snapshots/snapshots__pipeline@instance_canonical.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/instance_canonical.pr
---
== tokens ==
VOpen Class UIdent("Ord") LParen Ident("a") RParen VOpen Ident("cmp") Colon LParen Ident("a") Comma Ident("a") RParen Arrow KwInt VClose VSemi Instance Ident("ordInt") Colon UIdent("Ord") LParen KwInt RParen VOpen Fn Ident("cmp") LParen Ident("x") Comma Ident("y") RParen Eq VOpen If Ident("x") Lt Ident("y") Then VOpen Minus Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Int(IntLit { value: 1, suffix: None }) VClose VClose VClose VSemi Instance Ident("ordRev") Colon UIdent("Ord") LParen KwInt RParen VOpen Fn Ident("cmp") LParen Ident("x") Comma Ident("y") RParen Eq VOpen If Ident("x") Lt Ident("y") Then VOpen Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Minus Int(IntLit { value: 1, suffix: None }) VClose VClose VClose VSemi Canonical UIdent("Ord") LParen KwInt RParen Eq Ident("ordInt") VSemi Fn Ident("main") LParen RParen Eq Ident("cmp") LParen Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Ord",
            param: "a",
            supers: [],
            methods: [
                ClassMethod {
                    name: "cmp",
                    ty: Fun(
                        [
                            Var(
                                "a",
                            ),
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Int,
                    ),
                    span: 15..18,
                },
            ],
            span: 0..34,
        },
    ],
    instances: [
        InstanceDecl {
            name: "ordInt",
            class: "Ord",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "cmp",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                        Param {
                            name: "y",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: If(
                            Spanned {
                                node: Bin(
                                    Lt,
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 87..88,
                                    },
                                    Spanned {
                                        node: Var(
                                            "y",
                                        ),
                                        span: 91..92,
                                    },
                                ),
                                span: 87..92,
                            },
                            Spanned {
                                node: Neg(
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 105..106,
                                    },
                                ),
                                span: 104..106,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 122..123,
                            },
                        ),
                        span: 84..123,
                    },
                    wheres: [],
                    span: 65..123,
                },
            ],
            module: "",
            span: 36..123,
        },
        InstanceDecl {
            name: "ordRev",
            class: "Ord",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "cmp",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                        Param {
                            name: "y",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: If(
                            Spanned {
                                node: Bin(
                                    Lt,
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 176..177,
                                    },
                                    Spanned {
                                        node: Var(
                                            "y",
                                        ),
                                        span: 180..181,
                                    },
                                ),
                                span: 176..181,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 193..194,
                            },
                            Spanned {
                                node: Neg(
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 211..212,
                                    },
                                ),
                                span: 210..212,
                            },
                        ),
                        span: 173..212,
                    },
                    wheres: [],
                    span: 154..212,
                },
            ],
            module: "",
            span: 125..212,
        },
    ],
    canonicals: [
        CanonicalDecl {
            class: "Ord",
            head: Int,
            name: "ordInt",
            span: 214..241,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "cmp",
                        ),
                        span: 255..258,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 259..260,
                        },
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 2,
                                    suffix: None,
                                },
                            ),
                            span: 262..263,
                        },
                    ],
                ),
                span: 255..264,
            },
            wheres: [],
            span: 243..264,
        },
    ],
}

== types ==
main : () -> Int

== core (cbpv) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  i@ordInt@cmp(t@0, t@1)
fn i@ordInt@cmp(x, y) =
  return x to t@2
  return y to t@3
  t@2 < t@3 to t@4
  if t@4 then
    return -1
  else
    return 1
fn ordInt() =
  return _DOrd(thunk { \_p0 _p1. i@ordInt@cmp(_p0, _p1) })
fn i@ordRev@cmp(x, y) =
  return x to t@5
  return y to t@6
  t@5 < t@6 to t@7
  if t@7 then
    return 1
  else
    return -1
fn ordRev() =
  return _DOrd(thunk { \_p0 _p1. i@ordRev@cmp(_p0, _p1) })

== fbip (rc) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  i@ordInt@cmp(t@0, t@1)
fn i@ordInt@cmp(x, y) =
  return x to t@2
  return y to t@3
  t@2 < t@3 to t@4
  if t@4 then
    drop t@4
    return -1
  else
    drop t@4
    return 1
fn ordInt() =
  return _DOrd(thunk { \_p0 _p1. i@ordInt@cmp(_p0, _p1) })
fn i@ordRev@cmp(x, y) =
  return x to t@5
  return y to t@6
  t@5 < t@6 to t@7
  if t@7 then
    drop t@7
    return 1
  else
    drop t@7
    return -1
fn ordRev() =
  return _DOrd(thunk { \_p0 _p1. i@ordRev@cmp(_p0, _p1) })

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [1121 x i8] c"scheme  prism-core-hash-v2\0Abundle  e2b9d440297b39a25388429cc9f69efafeeb2ee86d9f695e9c61f6b313d2dbed\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:e2b9d440297b39a25388429cc9f69efafeeb2ee86d9f695e9c61f6b313d2dbed\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_iZaordIntZacmp  08eace05b71e4956caa3a8b2aa58770c0868212b4ffb0efa256c345e881d123f  i@ordInt@cmp\0Afn      prismfn_iZaordRevZacmp  a55aaea16e55f530509d4217818614a9d0e14e791bf58d6f94bbe2e458551220  i@ordRev@cmp\0Afn      prismfn_main  ed0609e5d77f0f5f6ddbad114d0233b709bd2eff84c61b14ff0997af334528fd  main\0Afn      prismfn_ordInt  935765be9b0a38f5be50cc3b2c0969e4219c788fc93b8126e9a7e17ae3bc9306  ordInt\0Afn      prismfn_ordRev  d4d1cfc48a8fd97d9c43afdec88e431a31a0794bf17706d7d3e946076ef0ed4d  ordRev\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [934 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  e2b9d440297b39a25388429cc9f69efafeeb2ee86d9f695e9c61f6b313d2dbed\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:e2b9d440297b39a25388429cc9f69efafeeb2ee86d9f695e9c61f6b313d2dbed\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_iZaordIntZacmp 08eace05b71e4956caa3a8b2aa58770c0868212b4ffb0efa256c345e881d123f i@ordInt@cmp arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0Astate prismfn_main ed0609e5d77f0f5f6ddbad114d0233b709bd2eff84c61b14ff0997af334528fd main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol2 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash2 = private constant [65 x i8] c"ed0609e5d77f0f5f6ddbad114d0233b709bd2eff84c61b14ff0997af334528fd\00"
@.kont_name2 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol2, ptr @.kont_hash2, ptr @.kont_name2 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  ret i64 -1
}

attributes #0 = { nounwind }

== run ==
output: []
result: -1
