tests/snapshots/snapshots__pipeline@interp_empty.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/interp_empty.pr
---
Lexical Error: empty interpolation hole `{}` at line 2:24
   ╭─[ <source>:2:24 ]
   │
 2 │ fn main() = println("a {} b")
   │                        │ 
   │                        ╰─ here
───╯
